Kold+Partners - Good Monday - Senior Frontend Developer. Front End Developer Needed Near Norristown - Latitude, Inc. - Career Page. Lead Frontend Developer #1072 job at Sojern in Istanbul, Turkey, powered by JobScore. ServiceNow Careers - Senior Front End Software Engineer. Job @ Shiji (Wroc?aw): Senior Front-end Developer | JOIN. Square Front End Engineer, Dashboard | SmartRecruiters. ServiceNow Careers - Staff Front End Software Engineer (UI). ThinkHR - Senior Manager, Front-End Engineering. ThinkHR - Senior Front-End Engineer. Job Application for Senior Frontend Engineer, Video at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering  at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering at Reddit. Job Application for Staff Frontend Engineer, Ads Engineering at Reddit. Bloomforth Corp Sr. Front End Developer | SmartRecruiters. Lucid Motors - Front-end Developer. Front-End Developer (Angular) - Experian Careers. New Relic Careers - Senior Front-End Engineer. Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN. Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters. QualiTest - Jobs: R&D Frontend Developer EL - Apply online. QualiTest - Jobs: R&D Frontend Team Leader EL - Apply online. Job @ Tundra Inc (Zürich): Senior Frontend Softwar... | JOIN. DataProphet Frontend Developer | SmartRecruiters. Ubisoft IT Developer ( Front-end) | SmartRecruiters. Ubisoft Développeur TI (Front-end) | SmartRecruiters. Kraken Digital Asset Exchange - Software Engineer, Frontend - Cryptowatch. Job Application for Senior Frontend Engineer - Content and Partners team at Glovo. Merkle Inc. AEM Frontend Tech Lead | SmartRecruiters. Ecosia - Jobs: Senior Software Developer: Frontend focus - Apply online. Job Application for Front-End Development Intern at Lightspeed ENG. Job Applica

--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/koldpartners/0d0d69c1-6853-446b-b69a-35455769705e'>Kold+Partners - Good Monday - Senior Frontend Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='http://latitudeinc.applytojob.com/apply/V10V2xOXa1/Front-End-Developer-Needed-Near-Norristown'>Front End Developer Needed Near Norristown - Latitude, Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/lead-frontend-developer-afpg9mRKer6BKGaKld2Sj6'>Lead Frontend Developer #1072 job at Sojern in Istanbul, Turkey, powered by JobScore</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oNJW9fwl&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=n431TKwg'>ServiceNow Careers - Senior Front End Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
@@ -118,7 +130,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tundra.join.com/jobs/265315-senior-frontend-software-engineer-angular-react'>Job @ Tundra Inc (Z?rich): Senior Frontend Softwar... | JOIN</a></h5> 
+<h5><a href='https://tundra.join.com/jobs/265315-senior-frontend-software-engineer-angular-react'>Job @ Tundra Inc (Z?rich): Senior Frontend Softwar... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -178,7 +190,7 @@
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/draftkings/e333aad5-4d11-49f0-9ac3-e26edb76d4e6'>DraftKings - Associate Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/draftkings/e333aad5-4d11-49f0-9ac3-e26edb76d4e6'>DraftKings - Associate Front End Developer</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -242,7 +254,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://durstexpress.join.com/jobs/257826-team-lead-frontend-development'>Job @ Durstexpress (Berlin): Team Lead Frontend De... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://durstexpress.join.com/jobs/257826-team-lead-frontend-development'>Job @ Durstexpress (Berlin): Team Lead Frontend De... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -335,7 +347,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/62F77B23E0'>Self Lender - Jobs: Senior Front End Software Engineer (React ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/62F77B23E0'>Self Lender - Jobs: Senior Front End Software Engineer (React ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Senior Front End Software Engineer (React/React 
 Native) at Self Lender.</p>
@@ -382,7 +394,7 @@ in Munich (published: 18.07.2019). Apply now or check the other available?...</p
 <p>3 days ago ... 0714 000 Y536 0000|Technology Division|CCBD Technology|Consumer 
 Banking Technology|CCBD Technology is now hiring a Front End Developer?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/intellicentrics/job/oKKAafwY'>IntelliCentrics Careers - Front End Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/intellicentrics/job/oKKAafwY'>IntelliCentrics Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -390,7 +402,7 @@ Banking Technology|CCBD Technology is now hiring a Front End Developer?...</p>
 <p><span class="badge badge-light">Barcelona Barcelona Barcelona Barcelona, Catalonia, Spain Barcelona</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://advantagemediagroup.applytojob.com/apply/tZ5xlVD8v4/Front-End-Web-Developer'>Front End Web Developer - Advantage Media Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://advantagemediagroup.applytojob.com/apply/tZ5xlVD8v4/Front-End-Web-Developer'>Front End Web Developer - Advantage Media Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -435,7 +447,7 @@ growth through Acorns' web frameworks, and other platform-based tools. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/frontend-developer-ahIU0aRler6zsEaKld2Sj6'>Frontend Developer #1070 job at Sojern in Istanbul, Turkey, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/sojern/jobs/frontend-developer-ahIU0aRler6zsEaKld2Sj6'>Frontend Developer #1070 job at Sojern in Istanbul, Turkey, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Istanbul Istanbul</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -446,18 +458,6 @@ growth through Acorns' web frameworks, and other platform-based tools. Provide
 <h5><a href='https://pressreader.workable.com/jobs/1072483'>Junior Front End Developer - Apply online - PressReader - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Apply online for the job of Junior Front End Developer at PressReader.</p>
-<hr/>
-<h5><a href='https://drover.workable.com/j/FC9D7A03B5?viewed=true'>Drover - Jobs: Frontend Developer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>5 days ago ... Apply online for the job of Frontend Developer at Drover.</p>
-<hr/>
-<h5><a href='https://cdl-2.workable.com/j/77246724CD'>CDL - Jobs: Junior Front End Developer - Apply online</a></h5> 
-<p><span class="badge badge-light">England, United Kingdom</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://cdl-2.workable.com/j/C23A6DB061'>CDL - Jobs: Senior Front End Developer - Apply online</a></h5> 
-<p><span class="badge badge-light">England, United Kingdom</span></p>
-<p>Posted on: 2019-07-23</p>
 <hr/>
 
 
